--- a/css/style.css
+++ b/css/style.css
@@ -221,11 +221,12 @@ header{
 }
  .info {
 	 	background-color: transparent;
-	    border: 1px solid #99a0a9;
+	    	border: 1px solid #99a0a9;
 	 	height: 60px;
 	 	width: 98%;
 	 	font-family: 'Lato', sans-serif;
 	 	font-size: 16px;
+	 	outline: none;
 }
 .mesgtext{
 	height: 100px;
