--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,45 @@ header{
 	margin-top:11px 0 30px;
 
 }
-.showcase_single{
+/*Overlay Starts*/
+.image{
+	position: relative;
+	width: 31%;
+	margin: 1%;
+	float: left;
+
+}
+.image_image{
+	width: 100%;
+}
+.image_overlay{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: red;
+	opacity:0;
+	transition: .6s;
+}
+.image_overlay:hover{
+	opacity:.6;
+}
+
+.icons{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+
+	
+	
+}
+.icons img{
+	border: 1px solid white;
+}
+/*Overlay Ends*/
+/*.showcase_single{
 	position: relative;
 	width: 31%;
 	margin: 1%;
@@ -209,7 +247,7 @@ header{
 	width: 40px;
 	border: 1px solid white;
 	
-}
+}*/
 /*Showcase Section End*/
 /*Contact Section Starts*/
 	.contact{
