--- a/css/style.css
+++ b/css/style.css
@@ -178,12 +178,12 @@ header{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: red;
-	opacity:0;
+	opacity: 0;
 	transition: .6s;
+
 }
 .image_overlay:hover{
-	background-color:#23a0ef
+	background-color: #23a0ef;
 	opacity:.6;
 }
 
@@ -193,8 +193,6 @@ header{
 	left: 50%;
 	transform: translate(-50%,-50%);
 
-	
-	
 }
 .icons img{
 	border: 1px solid white;
